spice/barrier.h
@@ -34,12 +34,7 @@
 
 #ifdef __GNUC__
 
-#ifdef __i386__
-#define spice_mb() __asm__ __volatile__ ("lock; addl $0,0(%%esp)": : :"memory")
-#else
-//mfence
-#define spice_mb() __asm__ __volatile__ ("lock; addl $0,0(%%rsp)": : :"memory")
-#endif
+#define spice_mb() __sync_synchronize ()
 
 #else
 
